--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -30,7 +30,7 @@
         <div>
             <form action="/submit" method="post">
                 <div class ="details">
-                    <%if(stats === "show"){%>
+                    <%if(stat === "show"){%>
                     <div class ="msg">Invalid Username or Password</div>
                     <%}%>
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
