--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,7 +24,7 @@
 
 <body>
 
-<a href = "/login-demo">login demo</a>
+<a href = "/login-demo?stats=hide">login demo</a>
 <br>
 <a href="/api-demo">API demo</a>
 
