improved Sign Page

--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -30,6 +30,7 @@
         <div>
             <form action="/CheckPwd" method="post">
                 <div class ="details">
+                    <div style="color: red"><%=message%></div>
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
                     <div class = "txt"><input type="text" placeholder="Password" name="Pwd" required></div>
                     <div class = "txt"><input type="text" placeholder="Re-Enter Password" name="rPwd" required></div>
