--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -36,7 +36,7 @@
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
                     <div class = "txt"><input type="text" placeholder="Password" name="pwd" required></div>
                     <div class = "submit"><button type="submit">Login</button></div>
-                    <div class = "SignIn">Don't have an account?<a href="/register">Register</a></div>
+                    <div class = "SignIn">Don't have an account?<a href="/register?msg">Register</a></div>
                 </div>
             </form>
         </div>
