--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -32,8 +32,8 @@
                 <div class ="details">
                     <div style="color: red"><%=message%></div>
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
-                    <div class = "txt"><input type="text" placeholder="Password" name="Pwd" required></div>
-                    <div class = "txt"><input type="text" placeholder="Re-Enter Password" name="rPwd" required></div>
+                    <div class = "txt"><input type="password" placeholder="Password" name="Pwd" required></div>
+                    <div class = "txt"><input type="password" placeholder="Re-Enter Password" name="rPwd" required></div>
                     <div class = "submit"><button type="submit">Sign In</button></div>
                 </div>
             </form>
