BCrypt hash included

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,11 +24,10 @@
 
 <body>
 
-<a href = "/login-demo?stats=hide">login demo</a>
-<br>
-<a href="/api-demo">API demo</a>
+<a href = "/login-demo?stats=hide"><button>LOGIN</button></a>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src = "/js/login.js"></script>
 </body>
 
 </html>
