--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -32,8 +32,7 @@
                 <div class ="details">
                     <div style="color: red"><%=message%></div>
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
-                    <div class = "txt"><input type="password" placeholder="Password" name="Pwd" required></div>
-                    <div class = "txt"><input type="password" placeholder="Re-Enter Password" name="rPwd" required></div>
+                    <div><input class = "pwd" type="password" placeholder="Password" name="Pwd" required></div>
                     <div class = "submit"><button type="submit">Sign In</button></div>
                 </div>
             </form>
@@ -41,7 +40,8 @@
     </div>
 </div>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src = "js/login.js"></script>
 </body>
 
 </html>
