--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -34,7 +34,7 @@
                     <div class ="msg">Invalid Username or Password</div>
                     <%}%>
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
-                    <div class = "txt"><input type="password" placeholder="Password" name="pwd" required></div>
+                    <div class = "pwd"><input type="password" placeholder="Password" name="pwd" required></div>
                     <div class = "submit"><button type="submit">Login</button></div>
                     <div class = "SignIn">Don't have an account?<a href="/register?msg">Register</a></div>
                 </div>
@@ -44,6 +44,8 @@
 </div>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src = "/js/login.js"></script>
 </body>
 
 </html>
