Added Google OAuth2.0, updated css

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -36,10 +36,12 @@
                     <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
                     <div class = "pwd"><input type="password" placeholder="Password" name="pwd" required></div>
                     <div class = "submit"><button type="submit">Login</button></div>
-                    <div class = "SignIn">Don't have an account?<a href="/register?msg">Register</a></div>
                 </div>
             </form>
         </div>
+        <div class = "SignIn">Don't have an account?<a href="/register?msg">Register</a></div>
+        <div class ="text">OR</div>
+        <div class ="GoogleCont"><a href = "/auth/google"><button>Google</button></a></div>
     </div>
 </div>
 
