--- a/public/css/loginWindow.css
+++ b/public/css/loginWindow.css
@@ -232,20 +232,45 @@ textarea {
     }
 }
 
-
+a{
+    color: royalblue;
+}
+input{
+    width: 200px;
+    height: 25px;
+    border-radius: 5px;
+    border-color: #cccccc;
+}
+button{
+    height: 30px;
+    width: 60px;
+    background: royalblue;
+    color: azure;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
 
 .MainBox{
     display: flex;
     justify-content: center;
     height: 90vh;
     align-items: center;
+    border: 2px dashed #ffffff;
 }
 
 .card{
     height: 300px;
     width: 300px;
-    border: 3px solid dimgrey;
+    border: 3px solid lightskyblue;
     border-radius: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .details{
@@ -253,22 +278,27 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 300px;
     gap: 3px;
+
 }
 
-button{
-    height: 30px;
-    width: 60px;
-    background: dimgrey;
-    color: azure;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+.SignIn{
+    padding-top: 5px;
 }
+
 .submit{
     justify-self: end;
+    padding-top: 4px;
+}
+.GoogleCont{
+    padding-top: 5px;
+}
+.GoogleCont a button{
+    width: 250px;
+    background: royalblue;
+    color: white;
+    font-family: cursive;
+    border-radius: 0px;
 }
 .msg{
     color: red;
